sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#id__false11/errors.sumo
Error: An unknown lane ('1_0') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_0').
Quitting (on error).
